<resources>
    <string name="app_name">Parcial_22A_TP3</string>
    <string name="title_explore">Explore</string>
    <string name="title_offers">Offers</string>
    <string name="title_profiles">Profile</string>
    <string name="title_search">Search Flight</string>
    <string name="title_notification">Notification</string>
    <string name="title_get_help">Get Help</string>
    <string name="title_calendar">Calendar</string>
    <string name="hello">Hello</string>
    <string name="profile_name">Macy Johnson</string>
    <string name="profile_country">Baguio, Philippines</string>
    <string name="profile_desc">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="payment_details">Payment Details</string>
    <string name="referral_code">Referral Code</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!--    -->
    <string name="feature_not_implemented">Feature not Implemented</string>
    <string name="backgroundimg">backgroundimg</string>
    <string name="new_tag_input">NEW</string>
    <string name="price_placeholder">$$$</string>
    <string name="view_details">View Details</string>

    <string name="offer_text_mastercard">Use your mastercard with any transaction and get 20% discount instantly!</string>
    <string name="offer_text_visa">Use your VISA credit or debit card with any transaction and get 25% discount instantly!</string>
    <string name="offer_title_text"><![CDATA[<b>Get 20% discount</b> with your Master credit cards]]></string>
    <string name="offer_title_text_visa"><![CDATA[<b>Get 25% discount</b> with your VISA credit or debit cards]]></string>

    <string name="settings_card_h1">Generales</string>
    <string name="settings_card_text">Modo Oscuro</string>
    <string name="overview">Overview</string>
    <string name="destination_description">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>

    <!--  SearchOfferItem  -->
    <string name="search_radiobutton_left">One way</string>
    <string name="search_radiobutton_right">Round trip</string>
    <string name="search_from_Label">From</string>
    <string name="search_from_text_Label">Select Departure</string>
    <string name="search_to_Label">To</string>
    <string name="search_to_text_Label">Select Arrival</string>
    <string name="search_calendar_Label">Departure Date</string>
    <string name="search_calendar_text_Label">Select Date</string>
    <string name="search_passengers_Label">Passengers</string>
    <string name="search_passengers_text_Label">1 Adult</string>
    <string name="search_class_Label">Class</string>
    <string name="search_class_text_Label">Economy</string>

    <string name="search_offer_text">Limited time offer!</string>
    <string name="search_title_text_mastercard"><![CDATA[Get 20% discount for Mastercard users]]></string>
    <string name="search_title_text_visa"><![CDATA[Get 25% discount with your VISA credit cards]]></string>



</resources>