<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_profiles"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profiles" />
        <item
            android:id="@+id/navigation_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/title_notification" />
        <item
            android:id="@+id/navigation_get_help"
            android:icon="@drawable/ic_ion_mail_outline"
            android:title="@string/title_get_help" />
        <item
            android:id="@+id/navigation_calendar"
            android:icon="@drawable/ic_calender"
            android:title="@string/title_calendar" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_clarity_settings_line"
            android:title="@string/title_settings" />
    </group>
</menu>